--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.ts",
-    "build": "./node_modules/.bin/netlify-lambda build src"
+    "start": "nodemon index.ts"
   },
   "keywords": [],
   "author": "",
