--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.ts"
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "start": "index.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +20,7 @@
     "@types/node": "^18.15.11",
     "@types/nodemailer": "^6.4.7",
     "@types/uuid": "^9.0.1",
+    "jest": "^29.5.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
