--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start": "index.ts"
+    "start": "nodemon index.ts"
   },
   "keywords": [],
   "author": "",
